--- a/references.bib
+++ b/references.bib
@@ -31,3 +31,26 @@ doi = {10.38094/jastt20165}
   address={Monterey, CA},
   isbn={978-0-412-04841-8}
 }
+
+@online{Zhang2018,
+  author = {Zhiyong Zhang},
+  title = {{Text Mining for Social and Behavioral Research using R}},
+  year = {2018},
+  url = {https://books.psychstat.org/textmining/index.html},
+}
+
+@book{SilgeRobinson2017,
+author = {Silge, Julia and Robinson, David},
+title = {{Text Mining with R: A Tidy Approach}},
+year = {2017},
+isbn = {1491981652},
+publisher = {{O'Reilly Media, Inc.}},
+edition = {1st},
+}
+
+@online{Muthambi2017,
+  author = {{Minister Faith Muthambi}},
+  title = {{SONA enables us to take part in our democracy}},
+  year = {2017},
+  url = {https://www.gcis.gov.za/sona-enables-us-take-part-our-democracy},
+}
